<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.CartFragment">

    <TextView
        android:id="@+id/textViewTotalPriceCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonConfirmCart"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewTotalCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonConfirmCart"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFoodDetail"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@color/yellow"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/pacifico"
            android:gravity="center"
            android:text="@string/my_cart"
            android:textColor="@color/white"
            android:textSize="26sp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConfirmCart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/confirm_cart"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTotalTL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tl"
        android:textColor="@color/tl_color"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTotalPriceCart"
        app:layout_constraintEnd_toStartOf="@+id/textViewTotalPriceCart"
        app:layout_constraintTop_toTopOf="@+id/textViewTotalPriceCart" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:dividerInsetEnd="32dp"
        app:dividerInsetStart="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTotalCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delivery"
        android:textColor="@color/hint_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/materialDivider"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_10"
        android:textColor="@color/hint_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/materialDivider"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:dividerInsetEnd="32dp"
        app:dividerInsetStart="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDelivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/subtotal"
        android:textColor="@color/hint_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/materialDivider2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSubtotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_0"
        android:textColor="@color/hint_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/materialDivider2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewSubtotalTL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tl"
        android:textColor="@color/hint_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSubtotalPrice"
        app:layout_constraintEnd_toStartOf="@+id/textViewSubtotalPrice"
        app:layout_constraintTop_toTopOf="@+id/textViewSubtotalPrice" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSubtotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarFoodDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>